--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "formik": "^2.4.5",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "nanoid": "^4.0.2",
+    "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.8.0",
@@ -28,8 +30,10 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-localstorage": "^0.4.1",
     "redux-persist": "^5.10.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
