--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-localstorage": "^0.4.1",
-    "redux-persist": "^5.10.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.3.0"
   },
